deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: samoim-backend-svc
  labels:
    app: samoim-backend
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: samoim-backend
