deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: samoim-svc
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - secretName: tls-secret
  rules:
  - host: "samoim.169.56.100.104.nip.io"
    http:
      paths:
      - path: /samoim
        pathType: Prefix
        backend:
          service:
            name: samoim
            port:
              number: 8080
